Fixed broken layout in the Widget Selector

--- a/modules/app/src/main/resources/assets/styles/view/context/context-panel.less
+++ b/modules/app/src/main/resources/assets/styles/view/context/context-panel.less
@@ -174,19 +174,15 @@
       .widget-viewer {
         font-size: 14px;
         cursor: default;
+        .ellipsis();
 
         .names-and-icon-view {
-          .@{_COMMON_PREFIX}names-view {
-            margin: 0 0 0 34px;
-          }
-
           .@{_COMMON_PREFIX}wrapper {
             margin-right: 8px;
 
             img {
               width: 26px;
               height: 26px;
-              margin-top: -1px;
             }
 
             .font-icon-default {
